--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  /* justify-content: center; */
+  margin: 0;
+  height: 100vh;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.app {
+  height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('./images/city.jpg');
+  background-size: cover;
+  background-position: center;
+   display: flex; 
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  text-align:center;
+  /* color: aliceblue; */
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  width: 30%;
+  height: 23%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: whitesmoke;
+  box-shadow: 7px 7px;
+  border-radius: 2%;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.heading {
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  height: 580px;
+  font-family: 'Spartan' sans-serif;
+  font-size: medium;
+  color: black;
+}
+
+.button{
+  position: relative;
+  outline: none;
+  text-decoration: none;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  height: 180px;
+  width: 150px;
+  bottom: 2px;
+  opacity: 1;
+
+  background-color: rgb(117, 172, 204);
+  border: 1px solid rgba(238, 240, 243, 0.6);
+}
+
+@media only screen and (max-widht:600px){
+  .card{
+    width: 60%;
+    height: 25%;
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
 }
